# brainpro

./: .gitignore  Cargo.toml  DESIGN.md  Dockerfile  IDEAS.md  README.md  USERGUIDE.md  docker-compose.yml  docker-entrypoint.sh  example-brainpro.toml  flake.nix  supervisord.conf
config/persona/mrbot/: agents.md  identity.md  manifest.md  optimize.md  plan-mode.md  soul.md  tooling.md
dashboard/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
dashboard/src/: App.tsx  index.css
fixtures/mock_webapp/: README.md
fixtures/mock_webapp_scratch/: .gitignore
fixtures/souls/: MRBOT.md
secrets/: README.md
src/: agent.rs  agent_impl.rs  backend.rs  claude_api.rs  claude_auth.rs  cli.rs  commands.rs  compact.rs  config.rs  context_factory.rs  cost.rs  gateway_client.rs  hooks.rs  lib.rs  llm.rs  main.rs  model_routing.rs  plan.rs  policy.rs  session.rs  subagent.rs  test_utils.rs  tool_display.rs  tool_filter.rs  tool_output.rs  transcript.rs
src/agent/: core.rs  tool_executor.rs
src/agent_service/: mod.rs  server.rs  turn_state.rs  worker.rs
src/gateway/: agent_conn.rs  client_mgr.rs  lanes.rs  mod.rs  server.rs
src/mcp/: client.rs  manager.rs  transport.rs
src/persona/: loader.rs  mod.rs
src/personality/: mod.rs
src/protocol/: client.rs  internal.rs  mod.rs
src/tools/: ask_user.rs  bash.rs  edit.rs  grep.rs  mod.rs  plan_mode.rs  read.rs  search.rs  task.rs  todo.rs  write.rs
src/utils/: validation.rs
validation/: README.md  conftest.py  run-all.sh  setup.sh
validation/harness/: modes.py
validation/lib/: assertions.sh  common.sh  docker.sh
validation/tests/: test_01_tools.py  test_03_editing.py  test_05_agent_loop.py  test_06_plan_mode.py  test_07_subagents.py  test_10_tdd.py  test_11_debugging.py  test_12_refactoring.py  test_14_git.py  test_15_multi_file.py
(+135 files in other folders)
