[package]
name = "brainpro"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "brainpro"
path = "src/main.rs"

[[bin]]
name = "brainpro-gateway"
path = "src/bin/gateway.rs"

[[bin]]
name = "brainpro-agent"
path = "src/bin/agent_daemon.rs"

[[bin]]
name = "yo"
path = "src/bin/yo.rs"

[dependencies]
tokio = { version = "1", features = ["full", "net"] }
tokio-tungstenite = "0.24"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
futures-util = "0.3"
dashmap = "6"
anyhow = "1"
base64 = "0.22"
diffy = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
dotenvy = "0.15"
glob = "0.3"
once_cell = "1"
regex = "1"
rustyline = { version = "17", features = ["with-file-history"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "serde_yml", version = "0.0.12" }
sha2 = "0.10"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
eventsource-stream = "0.2"
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
rand = "0.8"
secrecy = { version = "0.10", features = ["serde"] }
prometheus = "0.13"
wait-timeout = "0.2"
walkdir = "2"
shell-words = "1.1"
async-trait = "0.1"
tiktoken-rs = "0.6"

# Channel integrations (optional)
teloxide = { version = "0.14", features = ["macros"], optional = true }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend"], optional = true }

[features]
default = []
telegram = ["teloxide"]
discord = ["serenity"]
channels = ["telegram", "discord"]

[dev-dependencies]
tempfile = "3"
serial_test = "3"
